--- a/app/src/main/res/layout/onboard_page.xml
+++ b/app/src/main/res/layout/onboard_page.xml
@@ -51,7 +51,7 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/satoshi_bold"
@@ -61,7 +61,7 @@
             android:textSize="18dp" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/panah"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginTop="3dp"
